objects/PC_Program_Coverage__c.object
<CustomObject>
    <fields>
        <fullName>PC_Reason_Benefits_Not_Accepted__c</fullName>
        <description>The reason that the patient chose not to accept the benefits.</description>
        <label>Reason Benefits Not Accepted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Concern about side effects/product research</fullName>
                </value>
                <value>
                    <fullName>Wants to discuss with MD</fullName>
                </value>
                <value>
                    <fullName>Using alternative therapy</fullName>
                </value>
                <value>
                    <fullName>Other medical issues</fullName>
                </value>
                <value>
                    <fullName>Insurance reasons</fullName>
                </value>
                <value>
                    <fullName>Cost concern/patient did not want to apply to an alternate funding option</fullName>
                </value>
                <value>
                    <fullName>Pending alternate funding outcome</fullName>
                </value>
                <value>
                    <fullName>Prior authorization denied</fullName>
                </value>
                <value>
                    <fullName>Does not want to inject</fullName>
                </value>
                <value>
                    <fullName>Patient traveling</fullName>
                </value>
                <value>
                    <fullName>Wants to discuss with family member/caregiver</fullName>
                </value>
                <value>
                    <fullName>Benefits discrepancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Reason_for_Not_Covered__c</fullName>
        <description>The reason that the patient was not covered by this Health Plan for this program&apos;s medication.</description>
        <label>Reason for Not Covered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Choice 1</fullName>
                </value>
                <value>
                    <fullName>Choice 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Remaining_Deductible_Amt_Family__c</fullName>
        <description>Amount remaining for the annual family deductible (when individual and family deductibles apply based on health plan)</description>
        <label>Remaining Deductible Amount Family</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Remaining_Deductible_Amt_Individual__c</fullName>
        <description>Amount remaining for the annual deductible of the individual (when individual and family deductibles apply based on health plan)</description>
        <label>Remaining Deductible Amount Individual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Applied_Deductible__c</fullName>
        <description>Pharmacy Deductable applied amount</description>
        <label>Deductible Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Applied_Out_Of_Pocket__c</fullName>
        <description>Pharmacy Out Of Pocket Applied Amount</description>
        <label>Out Of Pocket Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Pay_Amt__c</fullName>
        <description>Pharmacy pay amount</description>
        <label>Patient Pay Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Remaining_Deductible__c</fullName>
        <description>Pharmacy Deductible Remaining amount</description>
        <label>Deductible Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Rx_Remaining_Out_Of_Pocket__c</fullName>
        <description>Pharmacy Out Of Pocket Remaining amount</description>
        <label>Out Of Pocket Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_hasActivePA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected or checked when the program coverage has an active prior authorization.</description>
        <label>Has Active PA</label>
        <type>Checkbox</type>
    </fields>
    <label>Program Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Coverage_Status__c</columns>
        <columns>PC_Coverage_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>COV-{000000000}</displayFormat>
        <label>Coverage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Coverage</pluralLabel>
    <recordTypes>
        <fullName>PC_Alternate_Funding_Coverage</fullName>
        <active>true</active>
        <label>Alternate Funding Coverage</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Copay_Coverage</fullName>
        <active>true</active>
        <label>Copay Coverage</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Medical_Coverage</fullName>
        <active>true</active>
        <description>This field indicates that the coverage is a medical coverage</description>
        <label>Medical Coverage</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_PAP</fullName>
        <active>true</active>
        <label>PAP Coverage</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Pharmacy_Plan</fullName>
        <active>true</active>
        <description>This field indicates that the coverage is a pharmacy coverage</description>
        <label>Pharmacy Coverage</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Private_Coverage</fullName>
        <active>false</active>
        <label>Medical Coverage (Private)</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Public_Coverage</fullName>
        <active>false</active>
        <label>Medical Coverage (Public)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PC_HealthPlanSelectionValidation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(PC_Health_Plan__c )) &amp;&amp; (PC_Health_Plan__r.Patient__r.Id  &lt;&gt;   PC_Program__r.Account.Id)</errorConditionFormula>
        <errorDisplayField>PC_Health_Plan__c</errorDisplayField>
        <errorMessage>Health plans related to the patient can only be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PC_ProgramType_Validation</fullName>
        <active>true</active>
        <description>This validation rule checks for the case type &quot;Program&quot; on field &quot;PC_Program__c&quot;</description>
        <errorConditionFormula>IF(OR(ISBLANK( PC_Program__c), ISNULL(PC_Program__c)), FALSE, NOT(ISPICKVAL(PC_Program__r.Type, &quot;Program&quot;)))</errorConditionFormula>
        <errorDisplayField>PC_Program__c</errorDisplayField>
        <errorMessage>Case selected must be of the type Program</errorMessage>
    </validationRules>
</CustomObject>